# Agentic-RAG

./: .gitignore  CHANGELOG.md  Makefile  README.md
knowledge-rag/: .env.example  .gitignore  Dockerfile.app  config.py  docker-compose.test.yml  docker-compose.yml  pyproject.toml  requirements.txt
knowledge-rag/.streamlit/: secrets.toml.example
knowledge-rag/agent/: analytics_tools.py  context_utils.py  graph.py  observability.py  safety.py  state.py  tools.py
knowledge-rag/domain/: __init__.py  cache.py  loader.py
knowledge-rag/evaluation/: generate_qa_candidates.py  ragas_runner.py
knowledge-rag/frontend/: app.py  export.py  export_md.py  graph_runner.py  persistence.py
knowledge-rag/ingestion/: chunker.py  indexer.py  normalizer.py  parser.py  run_ingestion.py  state_tracker.py
knowledge-rag/llm/: __init__.py  anthropic_provider.py  base.py  deepseek_provider.py  ollama_provider.py  retry.py
knowledge-rag/retrieval/: embedder.py  reranker.py  searcher.py
knowledge-rag/tests/: conftest.py  test_agent_graph.py  test_analytics_tools.py  test_answer_node_v2.py  test_audit_log.py  test_chunker.py  test_context_budget.py  test_critic_node.py  test_domain_pack.py  test_embedder.py  test_embedder_device.py  test_frontend_export.py  test_frontend_pagination.py  test_frontend_stats.py  test_frontend_timeout.py  test_generate_qa_candidates.py  test_history_summary.py  test_hr_pack.py  test_indexer.py  test_llm_providers.py  test_logging_config.py  test_normalizer.py  test_observability.py  test_orchestrate_node.py  test_parser.py  test_parser_dispatch.py  (+18 more)
(+30 files in other folders)
