[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "knowledge-rag"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "python-docx>=1.1",
    "mammoth>=1.8",
    "qdrant-client>=1.9",
    "FlagEmbedding>=1.3",
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "anthropic>=0.30",
    "openai>=1.40",
    "streamlit>=1.35",
    "openpyxl>=3.1",
    "ragas>=0.1",
    "datasets>=2.0",
    "python-dotenv>=1.0",
    "tiktoken>=0.7",
    "tqdm>=4.66",
    "PyYAML>=6.0",
    "pypdf>=4.0",
    "pdfplumber>=0.11",
    "beautifulsoup4>=4.12",
    "markdown-it-py>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-mock>=3.0",
    "pytest-asyncio>=0.24",
]
# Multi-replica deployments (HA, blue/green) need a shared database for
# history + audit. Install with: pip install -e ".[postgres]"
postgres = [
    "psycopg[binary]>=3.1",
]

[tool.hatch.build.targets.wheel]
packages = ["agent", "ingestion", "retrieval", "llm", "frontend", "evaluation", "domain"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
markers = [
    "e2e: end-to-end tests that need a live Qdrant (skip when unavailable)",
    "slow: long-running tests skipped by `make test-fast`",
]
